# Nalu

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  index.html  nalu.C  original.C  params.json  unit_tests.C
SQA/: buildAndTestScript.sh  buildTpls.sh  githubBackupScript.sh  naluEclipseFormat.xml  styleSqaGuide.txt  updateTrilinos7.2.sh
build_debug/: do-configNalu_debug
cmake/: CTestTestfile.cmake  CTestTestfile.cmake.in  FindHYPRE.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  NaluVersionInfo.h.in  README.md  ctest_common.cmake  ctest_gcc.cmake  ctest_intel.cmake  ctest_peregrine_gcc.cmake  ctest_peregrine_intel.cmake  ctest_prepare_tests.cmake  gcc-peregrine.cmake  gcc_peregrine.cmake  intel_peregrine.cmake  naluXCatalyst.in  prep_tests.cmake
docs/: CMakeLists.txt  Doxyfile.breathe.in  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/cluster_access/: how_to_connect_and_run.tex
docs/references/: references.bib
docs/source/: build_doc.rst  build_manually.rst  build_spack.rst  mcalister.rst  myinput.i  using.rst
docs/tutorial/: ME469_AdvectionReview.pptx  ME469_CVFEM_FEM_Compare.pptx  ME469_FD_EBVC_CC_CVFEM.pptx  ME469_Low_Mach_Review.pptx  ME469_VandV_Review.pptx
examples/hula/: hulaHoop2d_heatFlux_R0.i  hulaHoop2d_mks_R0.g
examples/shapes/: circle_R0.g  dgCircle_R0.i  dgElipse_R0.i  dgSquare_R0.i  elipse_R0.g  milestone.xml  square_R0.g
examples/street/: circular_cylinder_coarse.exo  milestone_aspect_ratio_smooth.xml  vortexStreetCVFEM_Quad4.i  vortexStreetEBVC_Quad4.i
include/: ABLForcingAlgorithm.h  ABLProfileFunction.h  Actuator.h  ActuatorDisc.h  ActuatorLine.h  ActuatorLineConfig.h.in  ActuatorLineFAST.h  ActuatorLinePointDrag.h  ActuatorSector.h  Adapter.h  AlgTraits.h  Algorithm.h  AlgorithmDriver.h  AssembleAdvectionDiffusionETESource.h~  AssembleContinuityEdgeContactSolverAlgorithm.h  AssembleContinuityEdgeOpenSolverAlgorithm.h  AssembleContinuityEdgeSolverAlgorithm.h  AssembleContinuityElemOpenSolverAlgorithm.h  AssembleContinuityElemSolverAlgorithm.h  AssembleContinuityInflowSolverAlgorithm.h  AssembleContinuityNonConformalPenaltyAlgorithm.h  AssembleContinuityNonConformalSolverAlgorithm.h  AssembleContinuityVofNonConformalSolverAlgorithm.h  AssembleCourantReynoldsElemAlgorithm.h  AssembleCourantReynoldsFemAlgorithm.h  AssembleElemSolverAlgorithm.h  AssembleElemSolverAlgorithmDep.h  AssembleElemSolverAlgorithmNewME.h  AssembleFaceElemSolverAlgorithm.h  AssembleHeatCondIrradWallSolverAlgorithm.h  AssembleHeatCondWallSolverAlgorithm.h  AssembleMomentumABLWallFunctionSolverAlgorithm.h  AssembleMomentumEdgeABLWallFunctionSolverAlgorithm.h  AssembleMomentumEdgeContactSolverAlgorithm.h  AssembleMomentumEdgeNonConformalPenaltyAlgorithm.h  AssembleMomentumEdgeOpenSolverAlgorithm.h  AssembleMomentumEdgeSolverAlgorithm.h  AssembleMomentumEdgeSolverAlgorithm.h.Original  AssembleMomentumEdgeSymmetrySolverAlgorithm.h  AssembleMomentumEdgeWallFunctionSolverAlgorithm.h  (+317 more)
include/element_promotion/: CVFEMTypeDefs.h  ElementCondenser.h  ElementDescription.h  (+11 more)
reg_tests/: CMakeLists.txt  CTestCustom.cmake.in  CTestList.cmake  CTestNightlyScript.cmake  CTestPrepareTests.cmake.in  pass_fail.sh  pass_fail_catalyst.sh
reg_tests/test_files/nrel5MWactuatorLine/: CMakeLists.txt  NRELOffshrBsline5MW_Onshore_ServoDyn.dat.in  nrel5MWactuatorLine.i  nrel5MWactuatorLine.norm  nrel5MWactuatorLine.norm.gold  nrel5mw.fst
reg_tests/test_files/nrel5MWactuatorLine/5MW_Baseline/ServoData/: CMakeLists.txt  DISCON.F90
src/: ABLForcingAlgorithm.C  ABLProfileFunction.C  ActuatorDisc.C  ActuatorLine.C  ActuatorLineFAST.C  ActuatorLinePointDrag.C  ActuatorSector.C  Adapter.C  Algorithm.C  AlgorithmDriver.C  AssembleAdvectionDiffusionETESource.C~  AssembleContinuityEdgeContactSolverAlgorithm.C  AssembleContinuityEdgeOpenSolverAlgorithm.C  AssembleContinuityEdgeSolverAlgorithm.C  AssembleContinuityElemOpenSolverAlgorithm.C  AssembleContinuityElemSolverAlgorithm.C  AssembleContinuityInflowSolverAlgorithm.C  AssembleContinuityNonConformalPenaltyAlgorithm.C  AssembleContinuityNonConformalSolverAlgorithm.C  AssembleContinuityVofNonConformalSolverAlgorithm.C  AssembleCourantReynoldsElemAlgorithm.C  AssembleCourantReynoldsFemAlgorithm.C  AssembleElemSolverAlgorithm.C  AssembleElemSolverAlgorithmDep.C  AssembleElemSolverAlgorithmNewME.C  AssembleFaceElemSolverAlgorithm.C  AssembleHeatCondIrradWallSolverAlgorithm.C  AssembleHeatCondWallSolverAlgorithm.C  AssembleMomentumABLWallFunctionSolverAlgorithm.C  AssembleMomentumEdgeABLWallFunctionSolverAlgorithm.C  AssembleMomentumEdgeContactSolverAlgorithm.C  AssembleMomentumEdgeNonConformalPenaltyAlgorithm.C  AssembleMomentumEdgeOpenSolverAlgorithm.C  AssembleMomentumEdgeSolverAlgorithm.C  AssembleMomentumEdgeSymmetrySolverAlgorithm.C  AssembleMomentumEdgeWallFunctionSolverAlgoirthm.C  AssembleMomentumEigenEdgeSolverAlgorithm.C  AssembleMomentumElemABLWallFunctionSolverAlgorithm.C  AssembleMomentumElemNonConformalPenaltyAlgorithm.C  AssembleMomentumElemOpenSolverAlgorithm.C  (+291 more)
unit_tests/: SuperElement.C  SuperElement.h  UnitTest1ElemCoordCheck.C  UnitTestABLWallFunction.C  UnitTestAssembleOnlyRhs.C  UnitTestBasicKokkos.C  UnitTestDiffusionQuad.C  UnitTestEigenDecomposition.C  UnitTestElemSuppAlg.C  UnitTestElementDescription.C  UnitTestFieldUtils.C  UnitTestFieldUtils.h  UnitTestGetDofStatus.C  UnitTestHOMasterElements.C  UnitTestHOOperatorsQuad.C  UnitTestHelperObjects.h  UnitTestHex27FaceNodeOrdering.C  UnitTestHexElementPromotion.C  UnitTestHexMasterElements.C  UnitTestHexSCVDeterminant.C  UnitTestIntegrationRule.C  UnitTestKernelGolds.h  UnitTestKernelUtils.C  UnitTestKernelUtils.h  UnitTestKernels.C  UnitTestKokkosME.C  UnitTestKokkosME.h  UnitTestKokkosMEBC.C  UnitTestKokkosMEBC.h  UnitTestKokkosMEGold.h  UnitTestKokkosUtils.h  UnitTestKokkosViews.C  UnitTestLinearSystem.h  UnitTestLocalGraphArrays.C  UnitTestMasterElements.C  UnitTestMetricTensor.C  UnitTestMovingAverage.C  UnitTestNGPMasterElements.C  UnitTestNonConformal.C  UnitTestNonConformalGhosting.C  (+18 more)
(+936 files in other folders)
